--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"prettier": "^2.8.8",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"sass": "^1.63.6",
+		"swiper": "^9.4.1",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.1.3"
 	}
